# libisaopencl

./: CMakeLists.txt  Makefile
debian/: .gitignore  README.Debian  changelog  control  copyright  watch
include/: Bits.hpp  Exceptions.hpp  InitializeOpenCL.hpp  Kernel.hpp
src/: Exceptions.cpp  InitializeOpenCL.cpp  Kernel.cpp
